--- a/assets/css/hospital.css
+++ b/assets/css/hospital.css
@@ -4,15 +4,34 @@
   --secundary-color:#f9f9f1;
   --button-radius:15px;
 }
+html {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
 
+  }
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Ubuntu', sem serifa;
+    text-decoration: none;
 
 }
+header {
+    background-color: var(--primary-color);
+}
+header .user{
+    padding-top: 20px;
+    padding-left: 20px;
+}
 
+header .user a span{
+    color: var(--secundary-color);
+    font-size: 20px;
+}
+
+header .user a span:hover{
+    color: red;
+}
 main{
     background-color: var(--primary-color);
     display: flex;
@@ -70,6 +89,9 @@ main{
 }
 
 .div-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 170px;
     height: 30px;
     border-radius: var(--button-radius);
@@ -77,8 +99,8 @@ main{
     color: black;
 }
 .div-button:hover{
-    background-color:var(--primary-color);
-    color: var(--secundary-color);
+    mix-blend-mode: hard-light;
+    opacity: 100%;
     cursor: pointer;
 }
 
