--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -5,7 +5,10 @@
   --secundary-color:#f9f9f1;
   --button-radius:15px;
 }
+html {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
 
+  }
 *{
     padding: 0;
     margin: 0;
