--- a/assets/css/VerMais.css
+++ b/assets/css/VerMais.css
@@ -566,8 +566,9 @@ main{
 }
 
 .footer-distributed .footer-right p{
-	color: white;
+	color: var(--secundary-color);
     margin-top: 20px;
+    text-align: justify;
 
 }
 
