--- a/assets/css/painelAdministrativo.css
+++ b/assets/css/painelAdministrativo.css
@@ -28,10 +28,8 @@
     display: none;
 }
 
-
 .sidebar {
     position: fixed;
-    height: 100%;
     width: 165px;
     left: 0;
     bottom: 0;
@@ -44,13 +42,13 @@
 .side-header {
     box-shadow: 0px 5px 5px -5px rgb(0 0 0 /10%);
     background-color: #22BAA0;
-    height: 60px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
- .side-head span {
+.side-head span {
     font-weight: 400;
 }
 .side-header img{
@@ -59,11 +57,8 @@
 .side-content {
     height: calc(100vh - 60px);
     overflow: auto;
-}
-
-/* width */
-.side-content::-webkit-scrollbar {
-  width: 5px;
+    left: -60px;
+    
 }
 
 /* perfil */
@@ -130,6 +125,7 @@
 #menu-toggle:checked ~ .main-content {
     margin-left: 60px;
     width: calc(100% - 60px);
+    
 }
 
 #menu-toggle:checked ~ .main-content header {
@@ -137,7 +133,7 @@
 }
 
 #menu-toggle:checked ~ .sidebar .profile,
-#menu-toggle:checked ~ .sidebar .side-menu a small {
+#menu-toggle:checked ~ .sidebar .side-menu a small,#menu-toggle:checked ~ .side-content .side-menu {
     display: none;
 }
 
@@ -157,7 +153,7 @@ header {
     top: 0;
     left: 165px;
     z-index: 100;
-    height: 60px;
+    height: 80px;
     box-shadow: 0px 5px 5px -5px rgb(0 0 0 /10%);
     background-color: var(--primary-color);
     transition: left 300ms;
@@ -182,8 +178,6 @@ header {
     cursor: pointer;
 }
 
-
-
 .user {
     display: flex;
     justify-content: center;
@@ -191,6 +185,9 @@ header {
 }
 .user a{
     color: var(--secundary-color);
+}
+.user a:hover {
+    color: red;
 }
 .user div, .client-img {
     height: 40px;
@@ -212,6 +209,7 @@ main {
     padding: 1.3rem 1rem;
     background-color: var(--secundary-color);
     border-bottom: 1px solid var(--secundary-color);
+    margin-top: 80px;
     
 }
 
@@ -350,35 +348,81 @@ input, button, select {
 .section-card{
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
+    flex-direction: column;
 }
-.card-container{
-    width: 900px;
-    height: 450px;
-    background-color: var(--secundary-color);
-    border-radius: 6px;
-    box-shadow: 0 5px 5px 1px rgba(0,0,0,.3);
-    margin: 30px;
+.section-card hr{
+        width: 100%;
+        background-color: var(--primary-color);
+        margin-top: 50px;
+    
+}
+.section-card .buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: var(--button-radius);
+    margin-top: 50px;
+    margin-bottom: -40px;
+}
+.section-card .buttons .button-alterar ,.section-card .buttons .button-deletar {
+    width: 150px;
+    height: 30px;
+    border-radius: var(--button-radius);
+    margin-left: 10px;
+    margin-right: 10px;
 
 }
-.card-container:hover , .card-container:hover .button{
+.section-card .buttons .button-alterar a,.section-card .buttons .button-deletar a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: var(--secundary-color);
+    text-decoration: none;
+    font-size: 20px;
+}
+.section-card .buttons .button-alterar{
+    background-color:#00ff00;
+}
+.section-card .buttons .button-deletar{
+    background-color: #ff0000;
+}
+
+.section-card .buttons .button-alterar:hover,.section-card .buttons .button-deletar:hover{
+    mix-blend-mode: color-burn;
+}
+
+.section-card .card-container{
+    width: 950px;
+    height: 470px;
+    background-color: var(--secundary-color);
+    border-radius: 6px;
+    box-shadow: 0 5px 10px 1px rgba(0,0,0,.3);
+    margin-top: 60px;
+    
+}
+ .section-card .card-container:hover , .section-card .card-container:hover .button{
     transition: .3s ease;
     background-color: var(--primary-color);
     color: var(--secundary-color);
 }
 
-.card-container:hover .btn, .card-container:hover h4,.card-container:hover h3,.card-container:hover p{
+.section-card .card-container:hover .btn,.section-card .card-container:hover h4, .section-card .card-container:hover .button h3,
+ .section-card .card-container:hover .button p{
     transition: .4s ease;
     color: var(--secundary-color);
 
 }
-.card-container:hover .button .div-ver-mais .div-button-ver-mais,.card-container:hover .button .div-ver-mais .div-button-ver-mais a{
+.section-card .card-container:hover .button .div-ver-mais .div-button-ver-mais,.section-card .card-container:hover .button .div-ver-mais .div-button-ver-mais a{
     background-color: var(--secundary-color);
     color: var(--primary-color);
     border-radius: var(--button-radius);
 
 }
-.top{
+.section-card .card-container .top{
     height: 100px;
     border-radius: 6px;
     background-color:  var(--primary-color);
@@ -387,7 +431,7 @@ input, button, select {
 
 }
   /* imagem*/
-.image-container{
+.section-card .card-container .top .image-container{
     background-color: var(--secundary-color);
     width: 150px;
     height: 150px;
@@ -398,43 +442,28 @@ input, button, select {
     transition: .5s ease;
 
 }
-.image-container img{
+.section-card .card-container .top .image-container img{
     background-color: var(--secundary-color);
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
 
-.image-container img:hover{
+.section-card .card-container .top .image-container img:hover{
     transform: scale(1.0);
     margin-bottom: 40px;
 
 } 
 /* endereço e horario */
-.button{
+ .section-card .card-container .button{
     background-color: var(--secundary-color);
     padding: 20px;
     padding-top: 60px;
     text-align: center;
 }
 
-
-.btn{
-    background: none;
-    color: var(--primary-color);
-    font-size: 0.9rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bold;
-    border: none;
-    border-radius: 30px;
-}
-.btn:hover{
-    border: 1px solid var(--secundary-color);
-
-}
    /* nome */
-   .button h3{
+  .section-card .card-container .button h3{
     line-height: .4;
     font-size: 1.6rem;
     color: rgba(0, 0,0, .9);
@@ -444,39 +473,40 @@ input, button, select {
 }
     /* hórario e endereço */
 
-    .button p{
+ .section-card .card-container .button p{
         color: rgba(0, 0,0, .7);
         margin-top: 50px;
         font-size: 20px;
     
-    }
+}
+
   /* button ver mais */
-  .div-ver-mais{
+ .section-card .card-container .button .div-ver-mais{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 15px;
 }
 
- .div-button-ver-mais:hover{
+.section-card .card-container .button .div-button-ver-mais:hover{
     background-color: var(--secundary-color);
     opacity: 100%;
     cursor: pointer;
 }
 
- .div-ver-mais .div-button-ver-mais{
-   
+ .section-card .card-container .button .div-ver-mais .div-button-ver-mais{
+
     width: 150px;
     height: 30px;
     border-radius: var(--button-radius);
     background-color: var(--primary-color);
 }
- .div-ver-mais .div-button-ver-mais-hospitais{   
+ .section-card .card-container .button .div-ver-mais .div-button-ver-mais-hospitais{   
     margin-top: 35px;
    
    }
 
- .div-ver-mais .div-button-ver-mais a{
+ .section-card .card-container .button .div-ver-mais .div-button-ver-mais a{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -606,7 +636,6 @@ input, button, select {
 }
 
 
-
 .footer-distributed .footer-center p a{
 	color:  lightseagreen;
 	text-decoration: none;;
@@ -634,7 +663,46 @@ footer img{
     margin-right: 25px;
     margin-left: 25px;
 }
+.sidebar {
+    left: -165px;
+    z-index: 90;
+}
 
+header {
+    left: 0;
+    width: 100%;
+}
+
+.main-content {
+    margin-left: 0;
+    width: 100%;
+}
+
+.page-header {
+  margin-top: 70px;
+}
+#menu-toggle:checked ~ .sidebar {
+    left: 0;
+    width: 165px;
+
+}
+
+#menu-toggle:checked ~ .sidebar .side-header span {
+    display: inline-block;
+}
+
+#menu-toggle:checked ~ .sidebar .profile,
+#menu-toggle:checked ~ .sidebar .side-menu a small {
+    display: block;
+}
+
+#menu-toggle:checked ~ .sidebar .side-menu a span {
+    font-size: 1.7rem;
+}
+
+#menu-toggle:checked ~ .main-content header {
+    left: 0px;
+}
 @media only screen and (max-width: 1200px) {
     .analytics {
         grid-template-columns: repeat(2, 1fr);
@@ -662,14 +730,12 @@ footer img{
     }
 
     .page-header {
-      margin-top: 50px;
+      margin-top: 70px;
     }
     #menu-toggle:checked ~ .sidebar {
         left: 0;
-    }
-    
-    #menu-toggle:checked ~ .sidebar {
         width: 165px;
+
     }
 
     #menu-toggle:checked ~ .sidebar .side-header span {
@@ -690,89 +756,110 @@ footer img{
     }
    
      /* card */
-     .card-container{
-    
-        width: 300px;
-        height: 380px;
-        background-color: var(--secundary-color);
-        border-radius: 6px;
-        box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
-        margin: 30px;
-    
-    }
-     /* nome */
-   .button h3{
-        font-size: 15px;
-        margin-bottom: 40px;
-        margin-top: 30px;
-    }
-        /* endereço e horario */
-
-   .button{
-        background-color: var(--secundary-color);
-        padding: 20px;
-        padding-top: 60px;
-        text-align: center;
-}
-    .button .btn-margin{
-         margin-top: -40px;
-         
-}
-    .button p{
-         margin: 35px;
-         font-size: 14px;
-
-}
-    /* imagem*/
-    .image-container{
-        width: 100px;
-        height: 100px;
-        margin-top: 20px;
-
-}
-    .top{
-        height: 60px;
-
-
-}
-     /* button ver mais */
-    
-    .div-ver-mais .div-button-ver-mais{   
-        width: 120px;
-        height: 25px;
-
-}
-
-    .div-ver-mais .div-button-ver-mais a {
-        font-size: 15px;
-}
-    /* buttons do catalógo*/
-    .div-buttons-catalogo .buuton-prox-ant{
-        width: 73px;
-        height: 24px;
-
-    }
-    .div-buttons-catalogo .buuton-prox-ant a{
-        font-size: 12px
-    }
-    .div-buttons-catalogo .button-catalogo {
-        width: 28px;
-        height: 24px;
-    }
-  /* Rodapé */
-  .footer-distributed{
-    margin-left: 0%;
-    width: 100%;
-  }
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-center,
-  .footer-distributed .footer-right{
-      display: block;
-      width: 100%;
-      margin-bottom: 100px;
-      text-align: center;
-  }
-
-}
-
-
+     .section-card{
+        flex-direction:row;
+     }
+     .section-card hr {
+            margin-top: 20px;
+            margin-bottom: -2px;
+     }
+         .section-card  .buttons{
+            display: flex;
+            margin-top: 15px;
+            margin-bottom: 0px;
+        }
+        .section-card .card-container .buttons .button-alterar ,.section-card .buttons .button-deletar {
+            width: 120px;
+            height: 30px;
+            border-radius: var(--button-radius);
+            margin-left: 10px;
+            margin-right: 10px;
+        
+        }
+        .section-card .buttons .button-alterar a,.section-card .buttons .button-deletar a{
+            font-size: 15px;
+        }
+        .section-card .card-container{
+            
+                width: 300px;
+                height: 400px;
+                background-color: var(--secundary-color);
+                border-radius: 6px;
+                box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
+                margin: 30px;
+            
+            }
+         /* nome */
+        .section-card .card-container .button h3{
+                font-size: 15px;
+                margin-bottom: 40px;
+                margin-top: 30px;
+            }
+                /* endereço e horario */
+        
+        .section-card  .card-container  .button{
+                    background-color: var(--secundary-color);
+                    padding: 20px;
+                    padding-top: 60px;
+                    text-align: center;
+            }
+        .section-card   .card-container  .button .btn-margin{
+                    margin-top: -40px;
+                    
+            }
+            .section-card  .card-container  .button p{
+                    margin: 35px;
+                    font-size: 14px;
+            
+            }
+                /* imagem*/
+        .section-card  .card-container .top  .image-container{
+                    width: 100px;
+                    height: 100px;
+                    margin-top: 20px;
+            
+            }
+            .section-card  .card-container .top{
+                    height: 60px;
+            
+            }
+                /* button ver mais */
+                
+            .card-container .button  .div-ver-mais .div-button-ver-mais{   
+                    width: 120px;
+                    height: 25px;
+            
+            }
+            
+            .section-card  .card-container .button  .div-ver-mais .div-button-ver-mais a {
+                    font-size: 15px;
+            }
+                /* buttons do catalógo*/
+                .div-buttons-catalogo .buuton-prox-ant{
+                    width: 73px;
+                    height: 24px;
+            
+                }
+                .div-buttons-catalogo .buuton-prox-ant a{
+                    font-size: 12px
+                }
+                .div-buttons-catalogo .button-catalogo {
+                    width: 28px;
+                    height: 24px;
+                }
+            /* Rodapé */
+            .footer-distributed{
+                margin-left: 0%;
+                width: 100%;
+            }
+            .footer-distributed .footer-left,
+            .footer-distributed .footer-center,
+            .footer-distributed .footer-right{
+                display: block;
+                width: 100%;
+                margin-bottom: 100px;
+                text-align: center;
+            }
+            
+        }
+        
