--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
   --shadow:12px 12px 10px rgba(0,0,0,0.25);
 }
 
+
 html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
 
@@ -515,6 +516,7 @@ main{
 .footer-distributed .footer-right p{
 	color: var(--secundary-color);
     margin-top: 20px;
+    text-align: justify;
 
 }
 
@@ -717,7 +719,7 @@ footer img{
     .card-container{
 
         width: 300px;
-        height: 380px;
+        height: 390px;
         border-radius: 6px;
     
     }
@@ -830,7 +832,7 @@ footer img{
     .card-container{
 
     width: 230px;
-    height: 380px;
+    height: 390px;
     background-color: var(--secundary-color);
     border-radius: 6px;
     box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
