--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -20,11 +20,27 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
 
   }
-body{
-    background-color: #eeeeee;
-    
-} 
 
+header{
+    background-color: var(--primary-color);
+    position: fixed;
+    z-index: 1000;
+  }
+
+header a h1{
+    margin-left: 30px;
+    padding-top: 40px;
+    color: var(--secundary-color);
+}
+
+header a{
+    text-decoration: none;
+}
+
+header a:hover{
+    text-decoration: underline;
+    text-decoration-color: var(--secundary-color);
+}
 .main-container{
     display: flex;
     justify-content: center;
@@ -38,9 +54,10 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 350px;
+    width: 100%;
     height: 100%;
     background-color: var(--primary-color);
+
 
 }
 .div-logo img{
@@ -61,6 +78,7 @@ body{
     background-color: transparent;
     margin: 20px;
     outline: none;
+    width: 250px;
     color: var(--secundary-color);
 
 
@@ -75,10 +93,11 @@ body{
     margin: 7px;
 }
 .div-button button{
-    width: 170px;
-    height: 30px;
+    width: 200px;
+    height: 40px;
     border-radius: var(--button-radius);
     background-color: var(--secundary-color);
+    border: none;
 }
 
 .div-button button a{
@@ -89,6 +108,7 @@ body{
     height: 100%;
     color: black;
     text-decoration: none;
+    font-size: 18px;
 
 }
 .div-button button:hover{
