--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
 
   }
+
 *{
     padding: 0;
     margin: 0;
@@ -35,7 +36,8 @@ body{
     background-color: var(--primary-color);
     z-index: 1000;
 }
-    /* button de login */
+
+ /* button de login */
 
 .button-entrar{
     width: 100px;
@@ -202,7 +204,6 @@ main{
     background-color: var(--primary-color);
 }
 
-
 .div-buttons .div-button a{
     display: flex;
     justify-content: center;
@@ -240,7 +241,7 @@ main{
 }
 .card-container{
     width: 900px;
-    height: 450px;
+    height: 500px;
     background-color: var(--secundary-color);
     border-radius: 6px;
     box-shadow: 0 5px 5px 1px rgba(0,0,0,.3);
@@ -248,23 +249,14 @@ main{
     border-radius: 6px;
 
 }
-.card-container:hover , .card-container:hover .button{
-    transition: .3s ease;
-    background-color: var(--primary-color);
-    color: var(--secundary-color);
+
+
+.card-container .div-button-ver-mais:hover{
+    mix-blend-mode: hard-light;
+    opacity: 100%;
+    cursor: pointer;
 }
 
-.card-container:hover .btn, .card-container:hover h4,.card-container:hover h3,.card-container:hover p{
-    transition: .4s ease;
-    color: var(--secundary-color);
-
-}
-.card-container:hover .button .div-ver-mais .div-button-ver-mais,.card-container:hover .button .div-ver-mais .div-button-ver-mais a{
-    background-color: var(--secundary-color);
-    color: var(--primary-color);
-    border-radius: var(--button-radius);
-
-}
 .top{
     height: 100px;
     border-radius: 6px;
@@ -306,20 +298,6 @@ main{
 }
 
 
-.btn{
-    background: none;
-    color: var(--primary-color);
-    font-size: 0.9rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bold;
-    border: none;
-    border-radius: 30px;
-}
-.btn:hover{
-    border: 1px solid var(--secundary-color);
-
-}
    /* nome */
    .button h3{
     line-height: .4;
@@ -380,7 +358,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 50px;
 }
 
@@ -400,6 +378,7 @@ main{
     align-items: center;
     text-decoration: none;
     color: var(--secundary-color);
+    border-radius: var(--button-radius);
     width: 100%;
     height: 100%;
 }
@@ -417,14 +396,13 @@ main{
 
 .div-buttons-catalogo .button-catalogo a {
     display: flex;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
     color: black;
     height: 100%;
+    height: 100%;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
 
 }
 
@@ -718,8 +696,8 @@ footer img{
         /* card */
     .card-container{
 
-        width: 300px;
-        height: 390px;
+        width: 320px;
+        height: 400px;
         border-radius: 6px;
     
     }
@@ -831,8 +809,8 @@ footer img{
     /* card */
     .card-container{
 
-    width: 230px;
-    height: 390px;
+    width: 240px;
+    height: 400px;
     background-color: var(--secundary-color);
     border-radius: 6px;
     box-shadow: 0 1px 5px 1px rgba(0, 0,0, .3);
@@ -928,11 +906,10 @@ footer img{
     
     /* catálogo*/
 
-    
             /* card */
     .card-container{
 
-        width: 300px;
+        width: 320px;
         height: 380px;
         border-radius: 6px;
     
