--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -34,12 +34,11 @@ header a h1{
 }
 
 header a{
-    text-decoration: none;
+    text-decoration-color: var(--secundary-color);
 }
 
 header a:hover{
-    text-decoration: underline;
-    text-decoration-color: var(--secundary-color);
+    text-decoration-color: red;
 }
 .main-container{
     display: flex;
@@ -92,14 +91,20 @@ header a:hover{
 .div-campos{
     margin: 7px;
 }
-.div-button button{
+.div-button button .div-campos{
     width: 200px;
     height: 40px;
     border-radius: var(--button-radius);
     background-color: var(--secundary-color);
     border: none;
 }
+.div-button{
+    background-color: var(--secundary-color);
+    width: 200px;
+    height: 40px;
+    border-radius: var(--button-radius);
 
+}
 .div-button button a{
     display: flex;
     justify-content: center;
@@ -109,12 +114,22 @@ header a:hover{
     color: black;
     text-decoration: none;
     font-size: 18px;
+    background-color: var(--secundary-color);
+    border-radius: var(--button-radius);
+
+}
+.div-button button{
+    width: 100%;
+    height: 100%;
+    border-radius: var(--button-radius);
+    border: none;
 
 }
 .div-button button:hover{
-    mix-blend-mode: hard-light;
-    opacity: 100%;
+    mix-blend-mode:hard-light;
     cursor: pointer;
+    background-color: var(--primary-color);
+    color: var(--secundary-color);
 }
 
 @media (max-width:540px){
